--- a/MQTT/MQTT.cbp
+++ b/MQTT/MQTT.cbp
@@ -11,10 +11,10 @@
 				<Option working_dir="/home/simon/Dropbox/domoticz-master_24_7_17/MQTT"/>
 				<Option type="4"/>
 				<MakeCommands>
-					<Build command="/usr/bin/make -j4 -f &quot;/home/simon/Dropbox/domoticz-master_24_7_17/MQTT/Makefile&quot;  VERBOSE=1 all"/>
-					<CompileFile command="/usr/bin/make -j4 -f &quot;/home/simon/Dropbox/domoticz-master_24_7_17/MQTT/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -j4 -f &quot;/home/simon/Dropbox/domoticz-master_24_7_17/MQTT/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -j4 -f &quot;/home/simon/Dropbox/domoticz-master_24_7_17/MQTT/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="/usr/bin/ninja -v all"/>
+					<CompileFile command="/usr/bin/ninja -v &quot;$file&quot;"/>
+					<Clean command="/usr/bin/ninja -v clean"/>
+					<DistClean command="/usr/bin/ninja -v clean"/>
 				</MakeCommands>
 			</Target>
 			<Target title="mqtt">
@@ -36,10 +36,10 @@
 					<Add directory="/usr/include"/>
 				</Compiler>
 				<MakeCommands>
-					<Build command="/usr/bin/make -j4 -f &quot;/home/simon/Dropbox/domoticz-master_24_7_17/MQTT/Makefile&quot;  VERBOSE=1 mqtt"/>
-					<CompileFile command="/usr/bin/make -j4 -f &quot;/home/simon/Dropbox/domoticz-master_24_7_17/MQTT/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -j4 -f &quot;/home/simon/Dropbox/domoticz-master_24_7_17/MQTT/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -j4 -f &quot;/home/simon/Dropbox/domoticz-master_24_7_17/MQTT/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="/usr/bin/ninja -v mqtt"/>
+					<CompileFile command="/usr/bin/ninja -v &quot;$file&quot;"/>
+					<Clean command="/usr/bin/ninja -v clean"/>
+					<DistClean command="/usr/bin/ninja -v clean"/>
 				</MakeCommands>
 			</Target>
 			<Target title="mqtt/fast">
@@ -61,10 +61,10 @@
 					<Add directory="/usr/include"/>
 				</Compiler>
 				<MakeCommands>
-					<Build command="/usr/bin/make -j4 -f &quot;/home/simon/Dropbox/domoticz-master_24_7_17/MQTT/Makefile&quot;  VERBOSE=1 mqtt/fast"/>
-					<CompileFile command="/usr/bin/make -j4 -f &quot;/home/simon/Dropbox/domoticz-master_24_7_17/MQTT/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -j4 -f &quot;/home/simon/Dropbox/domoticz-master_24_7_17/MQTT/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -j4 -f &quot;/home/simon/Dropbox/domoticz-master_24_7_17/MQTT/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="/usr/bin/ninja -v mqtt/fast"/>
+					<CompileFile command="/usr/bin/ninja -v &quot;$file&quot;"/>
+					<Clean command="/usr/bin/ninja -v clean"/>
+					<DistClean command="/usr/bin/ninja -v clean"/>
 				</MakeCommands>
 			</Target>
 		</Build>
